--- a/cartoview_arcgis_feature_server/templates/cartoview_arcgis_feature_server/layer_edit.html
+++ b/cartoview_arcgis_feature_server/templates/cartoview_arcgis_feature_server/layer_edit.html
@@ -9,6 +9,9 @@
 
   {% block body %}
       <h3>Cartoserver Featurelayer - Edit</h3>
+      {% if saved %}
+          <div class="alert alert-success">{% trans 'Feature Layer config is saved sucessfully.' %}</div>
+      {% endif %}
        <form method="post">{% csrf_token %}
 
           <div class="panel panel-info">
