--- a/templates/cartoview_arcgis_feature_server/layer_list.html
+++ b/templates/cartoview_arcgis_feature_server/layer_list.html
@@ -1,7 +1,5 @@
 {% extends BASE_TPL %}
-{% load i18n %}
-{% load url from future %}
-{% load cartoserver_tags %}
+{% load i18n cartoserver_tags %}
 {% block title %} Cartoserver Featurelayer {% endblock %}
 
 {% block body_class %}data{% endblock %}
