--- a/templates/cartoview_arcgis_feature_server/map_list.html
+++ b/templates/cartoview_arcgis_feature_server/map_list.html
@@ -1,8 +1,5 @@
 {% extends BASE_TPL %}
-{% load i18n %}
-{% load url from future %}
-{% load arcgis_portal_tags %}
-
+{% load i18n arcgis_portal_tags %}
 {% block title %} Web Maps {% endblock %}
 
 {% block body_class %}data{% endblock %}
